--- a/style.css
+++ b/style.css
@@ -1,57 +1,107 @@
-
-#tieu-de{
+#tieu-de {
     font-size: 30px;
     color: blue;
     text-transform: uppercase;
     font-weight: bold;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 0px;
+    width: 1400px;
+    background-color: bisque;
 }
 
-#data{
+#data {
     font-size: 20px;
     color: rgb(243, 3, 3);
     margin-top: 30px;
     margin-bottom: 10px;
 }
 
-#Data4, #Data5, #Data6{
-    width: 150px;
+#Data4,#Data5,#Data6 {
+    width: 400px;
 }
-#Btn_Data4, #Btn_Data5, #Btn_Data6{
+
+#Btn_Data4,#Btn_Data5,#Btn_Data6 {
     margin-left: 5px;
     width: 50px;
 }
-#Btn_Bool{
+
+#Btn_Bool {
     margin-left: 22px;
     margin-top: 100px;
 }
 
-#Btn_Bool button{
+#Btn_Bool button {
     margin-left: 22px;
 }
 
-#SVG_Start{
+#SVG_Start {
     position: absolute;
     margin-left: 20px;
 }
 
 
-#SVG_Stop{
+#SVG_Stop {
     position: absolute;
     margin-left: 110px;
 }
 
-#SVG_Memory{
+#SVG_Memory {
     position: absolute;
     margin-left: 200px;
 }
 
 
-#SVG_Output{
+#SVG_Output {
     position: absolute;
     margin-left: 290px;
 }
-#Btn_Start, #Btn_Stop, #Btn_Memory, #Btn_Output{
+
+#Btn_Start,#Btn_Stop,#Btn_Memory,#Btn_Output {
     width: 60px;
+}
+
+caption {
+    color: blue;
+    font-weight: bold;
+}
+
+table,th,td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+th,td {
+    color: brown;
+    padding: 5px;
+    text-align: left;
+    width: 100px;
+    text-align: center;
+}
+
+.chuabang1 {
+    position: absolute;
+    top: 50px;
+    left: 800px;
+  
+}
+
+.chuabang2 {
+    position: absolute;
+    top: 230px;
+    left: 800px;
+}
+
+.chuabang3 {
+    position: absolute;
+    top: 470px;
+    left: 800px;
+}
+
+.title_table {
+    padding: 20px;
+    width: 500px;
+    text-align: center;
+}
+#maubang {
+    background-color: aqua;
 }
