--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     font-weight: bold;
     text-align: center;
     margin-top: 0px;
-    width: 1400px;
+    width: 1700px;
     background-color: bisque;
 }
 
@@ -14,50 +14,6 @@
     color: rgb(243, 3, 3);
     margin-top: 30px;
     margin-bottom: 10px;
-}
-
-#Data4,#Data5,#Data6 {
-    width: 400px;
-}
-
-#Btn_Data4,#Btn_Data5,#Btn_Data6 {
-    margin-left: 5px;
-    width: 50px;
-}
-
-#Btn_Bool {
-    margin-left: 22px;
-    margin-top: 100px;
-}
-
-#Btn_Bool button {
-    margin-left: 22px;
-}
-
-#SVG_Start {
-    position: absolute;
-    margin-left: 20px;
-}
-
-
-#SVG_Stop {
-    position: absolute;
-    margin-left: 110px;
-}
-
-#SVG_Memory {
-    position: absolute;
-    margin-left: 200px;
-}
-
-
-#SVG_Output {
-    position: absolute;
-    margin-left: 290px;
-}
-
-#Btn_Start,#Btn_Stop,#Btn_Memory,#Btn_Output {
-    width: 60px;
 }
 
 caption {
@@ -78,30 +34,33 @@ th,td {
     text-align: center;
 }
 
-.chuabang1 {
-    position: absolute;
-    top: 50px;
-    left: 800px;
-  
-}
-
-.chuabang2 {
-    position: absolute;
-    top: 230px;
-    left: 800px;
-}
-
-.chuabang3 {
-    position: absolute;
-    top: 470px;
-    left: 800px;
-}
-
 .title_table {
     padding: 20px;
     width: 500px;
     text-align: center;
 }
-#maubang {
+
+.bomcom-content {
     background-color: aqua;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 50px;
+}
+.input {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    height: 300px;
+}
+
+.button-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.led-content {
+    display: flex;
+    flex-direction: column;
 }
